# coz-rust

./: Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
coz-cli/: Cargo.toml
coz-cli/src/: input.rs  main.rs
coz-cli/tests/: cli.rs
coz-rs/: Cargo.toml
coz-rs/src/: alg.rs  b64.rs  canon.rs  coz.rs  key.rs  lib.rs  revoke.rs
docs/: PUBLISHING.md
src/: b64.rs  canon.rs  coz.rs  error.rs  golden.rs  key.rs  lib.rs  revoke.rs
