[package]
categories  = ["cryptography", "authentication"]
description = "Coz cryptographic JSON messaging specification"
edition     = "2024"
keywords    = ["cryptography", "json", "signature", "authentication"]
license     = "BSD-3-Clause"
name        = "coz"
repository  = "https://github.com/Cyphrme/coz-rust"
version     = "0.1.0"

[dependencies]
# Serialization
base64ct   = { version = "1", features = ["alloc"] }
indexmap   = { version = "2", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography - RustCrypto ecosystem
digest    = "0.10"
rand      = "0.8"
sha2      = "0.10"
signature = "2"
thiserror = "1"

# ECDSA curves
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
p256  = { version = "0.13", features = ["ecdsa", "serde"] }
p384  = { version = "0.13", features = ["ecdsa", "serde"] }
p521  = { version = "0.13", features = ["ecdsa", "serde"] }

# Ed25519
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }

[dev-dependencies]
