[package]
description  = "CLI for Coz cryptographic JSON messaging"
edition      = "2024"
license      = "BSD-3-Clause"
name         = "coz-cli"
rust-version = "1.85"
version      = "0.1.0"

[[bin]]
name = "coz"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
base64ct   = { version = "1", features = ["alloc"] }
clap       = { version = "4", features = ["derive"] }
coz-rs     = { path = "../coz-rs", version = "0.1" }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
