[package]
description  = "CLI for Coz cryptographic JSON messaging"
edition      = "2024"
license      = "BSD-3-Clause"
name         = "coz-cli"
rust-version = "1.85"
version      = "0.2.0"

[[bin]]
name = "coz"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
base64ct   = { workspace = true }
clap       = { version = "4", features = ["derive"] }
coz-rs     = { path = "../coz-rs", version = "0.3" }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
