[package]
categories    = ["cryptography", "authentication"]
description   = "Coz cryptographic JSON messaging specification"
documentation = "https://docs.rs/coz-rs"
edition       = "2024"
keywords      = ["cryptography", "json", "signature", "authentication"]
license       = "BSD-3-Clause"
name          = "coz-rs"
repository    = "https://github.com/Cyphrme/coz-rust"
rust-version  = "1.85"
version       = "0.4.1"

[dependencies]
# Serialization
base64ct   = { workspace = true }
indexmap   = { version = "2", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

# Cryptography - RustCrypto ecosystem
digest    = "0.10"
rand      = "0.8"
sha2      = "0.10"
thiserror = "1"

# ECDSA curves (re-export ecdsa/signature traits internally)
p256 = { version = "0.13", features = ["ecdsa", "serde"] }
p384 = { version = "0.13", features = ["ecdsa", "serde"] }
p521 = { version = "0.13", features = ["ecdsa", "serde"] }

# Ed25519
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }

[package.metadata.docs.rs]
all-features = true
